Added minimum search example

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -46,16 +46,23 @@
 					data-background-image="forkjoin-universe.svg"
 					data-background-position="bottom left"
 					data-background-size="200%">
+					&nbsp;
 				</section>
 				<section
 					data-background-image="forkjoin-universe.svg"
 					data-background-position="center"
 					data-background-size="175%">
+					&nbsp;
 				</section>
 				<section
 					data-background-image="forkjoin-universe.svg"
 					data-background-position="right"
 					data-background-size="175%">
+					&nbsp;
+				</section>
+				<section>
+					<h1>ForkJoinPool</h1>
+					<img data-src="forkjoin_layered.svg" size="75%"/>
 				</section>
 
 			</div>
